Fixed install directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,7 @@
 set(JSONCPP_OLDEST_VALIDATED_POLICIES_VERSION "3.8.0")
 set(JSONCPP_NEWEST_VALIDATED_POLICIES_VERSION "3.13.2")
 cmake_minimum_required(VERSION ${JSONCPP_OLDEST_VALIDATED_POLICIES_VERSION})
-if("${CMAKE_VERSION}" VERSION_LESS "${JSONCPP_NEWEST_VALIDATED_POLICIES_VERSION}")
-    #Set and use the newest available cmake policies that are validated to work
-    set(JSONCPP_CMAKE_POLICY_VERSION "${CMAKE_VERSION}")
-else()
-    set(JSONCPP_CMAKE_POLICY_VERSION "${JSONCPP_NEWEST_VALIDATED_POLICIES_VERSION}")
-endif()
-cmake_policy(VERSION ${JSONCPP_CMAKE_POLICY_VERSION})
-if(POLICY CMP0091)
-    cmake_policy(SET CMP0091 NEW)
-endif()
-#
-# Now enumerate specific policies newer than JSONCPP_NEWEST_VALIDATED_POLICIES_VERSION
-# that may need to be individually set to NEW/OLD
-#
-foreach(pnew "") # Currently Empty
-    if(POLICY ${pnew})
-        cmake_policy(SET ${pnew} NEW)
-    endif()
-endforeach()
-foreach(pold "") # Currently Empty
-    if(POLICY ${pold})
-        cmake_policy(SET ${pold} OLD)
-    endif()
-endforeach()
 
-# Build the library with C++11 standard support, independent from other including
-# software which may use a different CXX_STANDARD or CMAKE_CXX_STANDARD.
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -43,29 +17,15 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 # ---------------------------------------------------------------------------
 # use ccache if found, has to be done before project()
 # ---------------------------------------------------------------------------
-find_program(CCACHE_EXECUTABLE "ccache" HINTS /usr/local/bin /opt/local/bin)
-if(CCACHE_EXECUTABLE)
-    message(STATUS "use ccache")
-    set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_EXECUTABLE}" CACHE PATH "ccache" FORCE)
-    set(CMAKE_C_COMPILER_LAUNCHER "${CCACHE_EXECUTABLE}" CACHE PATH "ccache" FORCE)
-endif()
 
 project(jsoncpp
-        # Note: version must be updated in three places when doing a release. This
-        # annoying process ensures that amalgamate, CMake, and meson all report the
-        # correct version.
-        # 1. ./meson.build
-        # 2. ./include/json/version.h
-        # 3. ./CMakeLists.txt
-        # IMPORTANT: also update the PROJECT_SOVERSION!!
-        VERSION 1.9.5 # <major>[.<minor>[.<patch>[.<tweak>]]]
         LANGUAGES CXX)
 
 set(PROJECT_SOVERSION 25)
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
-add_library(JSON_CPP STATIC
+add_library(${PROJECT_NAME} SHARED
     lib/json_value.cc
     lib/json_reader.cc
     lib/json_writer.cc)
@@ -73,8 +33,20 @@ add_library(JSON_CPP STATIC
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/release)
 
 add_executable(test_strunner src/jsontestrunner/main.cpp)
-target_link_libraries(test_strunner PRIVATE JSON_CPP)
+target_link_libraries(test_strunner PRIVATE ${PROJECT_NAME})
 
-# add_subdirectory(src)
 
-# add_subdirectory(example)
+set(INSTALL_LIB_DIR lib CACHE PATH "/usr/local/lib")
+set(INSTALL_INCLUDE_DIR include CACHE PATH "/usr/local/include")
+
+# Install the library
+install(TARGETS ${PROJECT_NAME}
+        EXPORT JSONCPPTargets
+        ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
+)
+
+file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/include/*.hpp)
+# Install the header files
+install(FILES ${HEADER_FILES}
+        DESTINATION ${INSTALL_INCLUDE_DIR}/jsoncpp
+)
