--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ compile_commands.json
 /src/test_lib_json/Makefile
 /src/test_lib_json/jsoncpp_test
 *.a
+*.so
 
 # eclipse project files
 .project
@@ -55,3 +56,4 @@ compile_commands.json
 
 # temps
 /version
+release
