Fixed error on write

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,25 @@
-set(JSONCPP_OLDEST_VALIDATED_POLICIES_VERSION "3.8.0")
-set(JSONCPP_NEWEST_VALIDATED_POLICIES_VERSION "3.13.2")
-cmake_minimum_required(VERSION ${JSONCPP_OLDEST_VALIDATED_POLICIES_VERSION})
+cmake_minimum_required(VERSION 3.8.0)
+project(jsoncpp VERSION 0.1.0)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-project(jsoncpp VERSION 0.1.0)
-
-include_directories(include)
+include_directories(
+        ${PROJECT_SOURCE_DIR}/include
+        ${PROJECT_SOURCE_DIR}/lib)
 
 # set runtime path
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/release/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/release/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/release/lib)
 
-# set .so file location
+add_library(${PROJECT_NAME} STATIC
+        ${PROJECT_SOURCE_DIR}/lib/json_reader.cpp
+        ${PROJECT_SOURCE_DIR}/lib/json_value.cpp
+        ${PROJECT_SOURCE_DIR}/lib/json_writer.cpp)
 
-add_library(${PROJECT_NAME} SHARED
-    lib/json_reader.cc
-    lib/json_value.cc
-    lib/json_writer.cc)
-
-
-## add install
-install(TARGETS ${PROJECT_NAME}
-    RUNTIME DESTINATION bin
-    LIBRARY DESTINATION lib
-    ARCHIVE DESTINATION lib)
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+    
 
 add_subdirectory(example)
