--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -18,6 +18,11 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     )
 endif()
 
+# add_executable(writestream writestream/writestream.cpp)
+# target_include_directories(writestream PUBLIC
+#     ${CMAKE_SOURCE_DIR}/include)
+# target_link_libraries(writestream PRIVATE ${PROJECT_NAME})
+
 foreach(example ${EXAMPLES})
     add_executable(${example} ${example}/${example}.cpp)
     target_include_directories(${example} PUBLIC ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/lib)
